SNC-5644: Tokenize search input type text.

--- a/src/MEGASync/transfers/gui/ui/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/ui/TransferManager.ui
@@ -286,29 +286,24 @@ QFrame[itsOn=true] &gt; #tFailed
     qproperty-icon: url(:/images/themed/light/cancel.svg); /*replaceThemeToken*/
 }
 
-/* tokenized to here */
-
 #wSearch QPushButton
 {
-    font-size: 14px;
-    color: #15191F;
+    color: #ffffffff; /*colorToken.page-background*/
     border: none;
     text-align: left;
     padding-left:-1px;
     padding-right: 0px;
-    qProperty-iconSize: 24px;
+    qproperty-iconSize: 16px;
+    qproperty-icon: url(:/images/themed/light/search_active.svg); /*replaceThemeToken*/
 }
 
 #tClearSearchResult
 {
-    width: 24px;
-    height: 24px;
-    min-width: 24px;
-    min-height: 24px;
-    max-width: 24px;
-    max-height: 24px;
-    qProperty-iconSize: 16px;
+    qproperty-iconSize: 16px;
+    qproperty-icon: url(:/images/themed/light/x.svg); /*replaceThemeToken*/
 }
+
+/* tokenized to here */
 
 #sStatus
 {
@@ -746,7 +741,7 @@ QToolButton
              </sizepolicy>
             </property>
             <property name="currentIndex">
-             <number>1</number>
+             <number>0</number>
             </property>
             <widget class="QWidget" name="pTransfers">
              <layout class="QHBoxLayout" name="pTransfersLayout">
@@ -1403,10 +1398,6 @@ QToolButton
                 <property name="text">
                  <string notr="true"/>
                 </property>
-                <property name="icon">
-                 <iconset>
-                  <normaloff>:/images/transfer_manager/sidebar/search_result_default.png</normaloff>:/images/transfer_manager/sidebar/search_result_default.png</iconset>
-                </property>
                 <property name="checkable">
                  <bool>true</bool>
                 </property>
@@ -1422,10 +1413,6 @@ QToolButton
                 </property>
                 <property name="text">
                  <string/>
-                </property>
-                <property name="icon">
-                 <iconset>
-                  <normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</iconset>
                 </property>
                </widget>
               </item>
@@ -1742,7 +1729,7 @@ QToolButton
                <string/>
               </property>
               <property name="icon">
-               <iconset>
+               <iconset resource="../../../gui/Resources.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -2121,7 +2108,7 @@ QToolButton
                <string>Open links</string>
               </property>
               <property name="icon">
-               <iconset>
+               <iconset resource="../../../gui/Resources.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</iconset>
               </property>
              </widget>
@@ -2135,7 +2122,7 @@ QToolButton
                <string>Upload</string>
               </property>
               <property name="icon">
-               <iconset>
+               <iconset resource="../../../gui/Resources.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</iconset>
               </property>
              </widget>
@@ -2149,7 +2136,7 @@ QToolButton
                <string>Download</string>
               </property>
               <property name="icon">
-               <iconset>
+               <iconset resource="../../../gui/Resources.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</iconset>
               </property>
              </widget>
@@ -2160,7 +2147,7 @@ QToolButton
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="icon">
-               <iconset>
+               <iconset resource="../../../gui/Resources.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</iconset>
               </property>
              </widget>
@@ -2546,7 +2533,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="../../../gui/Resources.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</iconset>
             </property>
            </widget>
@@ -2632,7 +2619,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="../../../gui/Resources.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</iconset>
             </property>
            </widget>
@@ -2679,7 +2666,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="../../../gui/Resources.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</iconset>
             </property>
            </widget>
@@ -2726,7 +2713,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="../../../gui/Resources.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</iconset>
             </property>
            </widget>
@@ -2799,7 +2786,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="../../../gui/Resources.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</iconset>
             </property>
            </widget>
@@ -2904,7 +2891,9 @@ QToolButton
   <tabstop>leSearchField</tabstop>
   <tabstop>tSearchCancel</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../../../gui/Resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>bSearch</sender>
