--- a/src/MEGASync/stalled_issues/gui/stalled_issues_cases/ui/MoveOrRenameCannotOccur.ui
+++ b/src/MEGASync/stalled_issues/gui/stalled_issues_cases/ui/MoveOrRenameCannotOccur.ui
@@ -13,15 +13,6 @@
   <property name="windowTitle">
    <string notr="true"/>
   </property>
-  <property name="styleSheet">
-   <string notr="true">#selectLabel
-{
-    font-family: Lato Bold;
-    font-size: 13px;
-    line-height: 16px;
-    color: #333333;
-}</string>
-  </property>
   <layout class="QVBoxLayout" name="layout">
    <property name="spacing">
     <number>7</number>
@@ -43,7 +34,6 @@
      <property name="font">
       <font>
        <family>Lato 13</family>
-       <pointsize>-1</pointsize>
        <bold>true</bold>
       </font>
      </property>
@@ -52,6 +42,9 @@
      </property>
      <property name="indent">
       <number>0</number>
+     </property>
+     <property name="type" stdset="0">
+      <string notr="true">primary</string>
      </property>
     </widget>
    </item>
