--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueHeader.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueHeader.ui
@@ -41,37 +41,34 @@
 }
 
 /*********** actionContainer **********/
-#actionMessageContainer[STATE=&quot;being solved&quot;]
+#actionMessageContainer
 {
-	background-color: #F3F4F4;
-	border-radius: 4px;
+   border-radius: 4px;
 }
 
-#actionMessageContainer[STATE=&quot;being solved&quot;] QLabel
+#actionMessageContainer[STATE=&quot;being solved&quot;]
 {
-    color: #616366;
+	background-color: #F3F4F4; /*colorToken.surface-2*/
 }
 
 #actionMessageContainer[STATE=&quot;solved&quot;]
 {
-	background-color: #CFFCDB;
-	border-radius: 4px;
+	background-color: #CFFCDB; /*colorToken.notification-success*/
 }
 
 #actionMessageContainer[STATE=&quot;solved&quot;] QLabel
 {
-    color: #007C3E;
+    color: #007C3E; /*colorToken.text-success*/
 }
 
 #actionMessageContainer[STATE=&quot;failed&quot;]
 {
-	background-color: #FFE4E8;
-	border-radius: 4px;
+	background-color: #FFE4E8; /*colorToken.notification-error*/
 }
 
 #actionMessageContainer[STATE=&quot;failed&quot;] QLabel
 {
-	color: #E31B57;
+	color: #E31B57; /*colorToken.text-error*/
 }
 /*********** actionContainer **********/
 </string>
@@ -464,6 +461,9 @@
            <property name="text">
             <string/>
            </property>
+           <property name="type" stdset="0">
+            <string notr="true">secondary</string>
+           </property>
           </widget>
          </item>
         </layout>
@@ -476,15 +476,15 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>WordWrapLabel</class>
+   <extends>QTextEdit</extends>
+   <header>WordWrapLabel.h</header>
+  </customwidget>
+  <customwidget>
    <class>WaitingSpinnerWidget</class>
    <extends>QWidget</extends>
    <header>gui/WaitingSpinnerWidget.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>WordWrapLabel</class>
-   <extends>QTextEdit</extends>
-   <header>WordWrapLabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
