--- a/src/MEGASync/transfers/gui/ui/TransfersAccountInfoWidget.ui
+++ b/src/MEGASync/transfers/gui/ui/TransfersAccountInfoWidget.ui
@@ -27,31 +27,40 @@
 
 #pbStorage
 {
-   height: 2px;
-   min-height: 2px;
-   max-height: 2px;
-	border-radius: 1px;
-	background-color: #ff616366; /*colorToken.border-strong*/
+height: 4px;
+min-height: 4px;
+max-height: 4px;
+border:0px;
+border-radius: 2px;
+background-color: #ff616366; /*colorToken.border-strong*/
 }
 
 #pbStorage::chunk[state=&quot;default&quot;]
 {
-	background-color: #ff09bf5b; /*colorToken.indicator-green*/
+background-color: #ff09bf5b; /*colorToken.indicator-green*/
+border-radius: 2px;
+border:0px;
 }
 
 #pbStorage::chunk[state=&quot;almost&quot;]
 {
-	background-color: #fffb6514; /*colorToken.indicator-orange*/
+background-color: #fffb6514; /*colorToken.indicator-orange*/
+border-radius: 2px;
+border:0px;
 }
 
 #pbStorage::chunk[state=&quot;almostfull&quot;]
 {
-	background-color: #fffb6514; /*colorToken.indicator-orange*/
+background-color: #fffb6514; /*colorToken.indicator-orange*/
+border-radius: 2px;
+border:0px;
 }
 
 #pbStorage::chunk[state=&quot;full&quot;]
 {
-	background-color: #fff63d6b; /*colorToken.indicator-pink*/
+background-color: #fff63d6b; /*colorToken.indicator-pink*/
+border-radius: 2px;
+border:0px;
 }
 </string>
   </property>
@@ -77,7 +86,7 @@
    <item>
     <layout class="QVBoxLayout" name="vlContainer">
      <property name="spacing">
-      <number>13</number>
+      <number>8</number>
      </property>
      <property name="leftMargin">
       <number>20</number>
@@ -240,13 +249,13 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>2</height>
+            <height>4</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>2</height>
+            <height>4</height>
            </size>
           </property>
           <property name="value">
