Tokenizing loading view

--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssuesDialog.ui
@@ -43,7 +43,7 @@
 background-color: #FFFFFFFF; /*colorToken.page-background*/
 }
 
-#stalledIssuesTree{
+#TreeViewContainer QTreeView{
 background-color: #FFFFFFFF; /*colorToken.page-background*/
 }
 
