--- a/src/MEGASync/transfers/gui/ui/TransfersAccountInfoWidget.ui
+++ b/src/MEGASync/transfers/gui/ui/TransfersAccountInfoWidget.ui
@@ -16,13 +16,13 @@
   <property name="styleSheet">
    <string notr="true">QWidget
 {
-    background-color: #fff7f7f7; /*colorToken.surface-1*/
+background-color: #fff7f7f7; /*colorToken.surface-1*/
 }
 
 #lStorage
 {
-	line-height: 18px;
-   color: #ff333333; /*colorToken.text-primary*/
+line-height: 18px;
+color: #ff333333; /*colorToken.text-primary*/
 }
 
 #pbStorage
@@ -35,32 +35,30 @@ border-radius: 2px;
 background-color: #ff616366; /*colorToken.border-strong*/
 }
 
+#pbStorage::chunk
+{
+border-radius: 2px;
+border: 0px;
+}
+
 #pbStorage::chunk[state=&quot;default&quot;]
 {
 background-color: #ff09bf5b; /*colorToken.indicator-green*/
-border-radius: 2px;
-border:0px;
 }
 
 #pbStorage::chunk[state=&quot;almost&quot;]
 {
 background-color: #fffb6514; /*colorToken.indicator-orange*/
-border-radius: 2px;
-border:0px;
 }
 
 #pbStorage::chunk[state=&quot;almostfull&quot;]
 {
 background-color: #fffb6514; /*colorToken.indicator-orange*/
-border-radius: 2px;
-border:0px;
 }
 
 #pbStorage::chunk[state=&quot;full&quot;]
 {
 background-color: #fff63d6b; /*colorToken.indicator-pink*/
-border-radius: 2px;
-border:0px;
 }
 </string>
   </property>
@@ -202,6 +200,9 @@ border:0px;
           </property>
           <property name="type" stdset="0">
            <string notr="true">primary</string>
+          </property>
+          <property name="dimension" stdset="0">
+           <string notr="true">small</string>
           </property>
          </widget>
         </item>
